--- a/android/capacitor-zendesk-chat/build.gradle
+++ b/android/capacitor-zendesk-chat/build.gradle
@@ -43,7 +43,7 @@ android {
 }
 
 dependencies {
-    implementation 'ionic-team:capacitor-android:1.0.0-beta.17'
+    implementation 'ionic-team:capacitor-android:1+'
     implementation 'com.zopim.android:sdk:1.4.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
