--- a/ios/CapacitorZendeskChat/Podfile
+++ b/ios/CapacitorZendeskChat/Podfile
@@ -7,7 +7,7 @@ target 'CapacitorZendeskChat' do
 
   # Pods for CapacitorZendeskChat
 
-  pod 'Capacitor', '~> 1.0.0-beta.16'
+  pod 'Capacitor'
   pod 'ZDCChat', '~> 1.4.0'
 
 end
