--- a/package.json
+++ b/package.json
@@ -44,10 +44,10 @@
         "access": "public"
     },
     "peerDependencies": {
-        "@capacitor/core": "^1.0.0-beta.17"
+        "@capacitor/core": "latest"
     },
     "devDependencies": {
-        "@capacitor/core": "1.0.0-beta.17",
+        "@capacitor/core": "latest",
         "typescript": "2.9.1"
     }
 }
